welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:12: error: not found: value off
			return off;
                               ^